Added generic nostr endpoints
